# neocortex

./: .bazelrc  .ccls  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  compile_commands.json  doxygen.ini  generate.py  makefile  nc3  neocortex.sln  neocortex.vcxproj  neocortex_test.vcxproj  pine.sln  pine.vcxproj
doc/html/: annotated.html  classes.html  classnc2_1_1Engine-members.html  classnc2_1_1Engine.html  classnc2_1_1Evaluation-members.html  classnc2_1_1Evaluation.html  classnc2_1_1Game-members.html  classnc2_1_1Game.html  classnc2_1_1Move-members.html  classnc2_1_1Move.html  classnc2_1_1Occboard-members.html  classnc2_1_1Occboard.html  classnc2_1_1Position-members.html  classnc2_1_1Position.html  classnc2_1_1Result-members.html  classnc2_1_1Result.html  classnc2_1_1SearcherST-members.html  classnc2_1_1SearcherST.html  classnc2_1_1UnitTest-members.html  classnc2_1_1UnitTest.html  classnc2_1_1search_1_1Result-members.html  classnc2_1_1search_1_1Result.html  classnc2_1_1tests_1_1DummyTest-members.html  classnc2_1_1tests_1_1DummyTest.html  classnc2_1_1tests_1_1MatesTest-members.html  classnc2_1_1tests_1_1MatesTest.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d93a1d4020dea85bb71b237545b5e722.html  engine_8h_source.html  eval_8h_source.html  eval__type_8h_source.html  files.html  functions.html  functions_func.html  game_8h_source.html  hierarchy.html  index.html  lookup__bishop_8h_source.html  lookup__king_8h_source.html  lookup__knight_8h_source.html  (+17 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js
neocortex/: CMakeLists.txt  ab.c  ab.h  attacks.c  attacks.h  bitboard.h  board.c  board.h  eval.c  eval.cpp  eval.h  eval_consts.cpp  magic_consts.h  mcts.c  mcts.h  neocortex.c  perft.cpp  perft.h  piece.h  platform.h  position.c  position.cpp  position.h  search.c  search.cpp  search.h  types.c  types.h  uci.c  uci.cpp  uci.h  util.cpp  zobrist.c  zobrist.cpp  zobrist.h
src/: attacks.cpp  attacks.h  basic.c  basic.h  bb.c  bb.h  bitboard.cpp  bitboard.h  board.cpp  board.h  color.cpp  color.h  engine.cpp  engine.h  eval.c  eval.cpp  eval.h  eval_consts.cpp  eval_consts.h  eval_type.c  eval_type.cpp  eval_type.h  game.cpp  game.h  input.cpp  input.h  log.cpp  log.h  lookup.cpp  lookup.h  lookup_bishop.cpp  lookup_bishop.h  lookup_king.cpp  lookup_king.h  lookup_knight.cpp  lookup_knight.h  lookup_pawn.cpp  lookup_pawn.h  lookup_rook.cpp  lookup_rook.h  (+80 more)
src/cppflow/: raw_ops.h  tensor.h
src/tests/: test_dummy.cpp  test_dummy.h  test_mates.cpp  test_mates.h
test/: test.cpp
